--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,52 @@
 {
   "name": "Udacity MWS Restaurant App",
-  "short_name": "noms",
-  "start_url": "external['/']",
-  "icons": [{
-    "src": "img/appicon.png",
-    "sizes": "128x128",
-    "type": "image/png"
-  },
+  "short_name": "MWSnoms",
+  "theme_color": "#090979",
+  "background_color": "#090979",
+  "display": "standalone",
+  "Scope": "/",
+  "start_url": "/",
+  "icons": [
     {
-      "src": "img/icon192.png",
+      "src": "images/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "images/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "images/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "images/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "images/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png"
+    },
+    {
+      "src": "images/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
-      {
-        "src": "img/icon512.png",
-        "sizes": "512x512",
-        "type": "image/png"
-        }],
-    "background_color": "#090979",
-    "display": "browser",
-    "theme_color": "#090979"
+    {
+      "src": "images/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "images/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "splash_pages": null
 }
